--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.1.5",
     "formik": "^2.4.6",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "validator": "^13.12.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
