--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "dompurify": "^3.1.5",
     "formik": "^2.4.6",
     "next": "14.2.3",
