--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "dompurify": "^3.1.5",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "prop-types": "^15.8.1",
