--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.0.0",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "axios": "^1.7.2",
     "dompurify": "^3.1.5",
     "formik": "^2.4.6",
     "next": "14.2.3",
@@ -16,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^15.12.0",
     "validator": "^13.12.0",
     "yup": "^1.4.0"
   },
